[project]
name = "nseoptions"
version = "0.1.0"
description = "NSE equity/deliverable/derivatives analysis with charts"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

# Core dependencies for the notebook
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "pyarrow>=16",
  "plotly>=5.22",
  "ipywidgets>=8.1",
  "kaleido>=0.2.1",
  "jupyter>=1.0",
  "ipykernel>=6.29",
]

[tool.uv]
# Create and use a local .venv inside the workspace
venv = ".venv"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"